# blink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  xmake.lua
bsp/blue_pill/: bsp.cpp  bsp.hpp  startup_gcc.cpp
bsp/stm32f407g_disco/: bsp.hpp
bsp/stm32mp157_dk2/: bsp.cpp  bsp.hpp  memory.ld  startup_gcc.cpp
src/: main.cpp
